--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,27 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.counters{
+    display: flex;
+    align-items: center;
+}
+
+.counter{
+    margin-right: 10px;
+    border: 1px solid transparent;
+    display: inline-block;
+    padding: 10px;
+}
+
+.answered{
+    border: 1px solid $green;
+    display: inline-block;
+    padding: 10px;
+    color: $green;
+}
+
+.answered-accepted{
+    background-color: $green;
+    color: #fff;
+}
