Added Question form

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10519,3 +10519,12 @@ a.text-dark:focus {
   color: #fff;
 }
 
+.questionsHeader {
+  display: flex;
+  align-items: center;
+}
+
+.questionsHeader__title {
+  margin-bottom: 0;
+}
+
