--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,8 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
+
 // Variables
 @import 'variables';
 
@@ -72,4 +74,75 @@
 
 .o-h{
     overflow: hidden;
+}
+
+.gravatar{
+    width: 30px;
+    height: auto;
+}
+
+.answers{
+    margin-top: 20px;
+}
+
+.answer{
+    margin-top: 20px;
+}
+
+.respondent{
+    display: flex;
+    align-items: center;
+    &__person{
+        display: flex;
+        flex-direction: column;
+    }
+    &__personName{
+        display: inline-block;
+        margin-left: 5px;
+    }
+}
+
+.gravatarWrap{
+    display: inline-block;
+}
+
+.vote-controls{
+    min-width: 60px;
+    margin-right: 30px;
+    text-align: center;
+    color: $gray-700;
+    display: flex;
+    flex-direction: column;
+
+    span, a{
+        display: block;
+        color: $gray-700;
+        text-decoration: none;
+    }
+    .votes-count{
+        font-size: 22px;
+    }
+    .favorites-count{
+        font-size: 12px;
+    }
+
+    a{
+        cursor: pointer;
+        color: $gray-600;
+
+        &.off, &.off:hover{
+            color: $gray-500;
+        }
+
+        &.favorite{
+            &.favorited, &.favorited:hover{
+                color: $warning;
+            }
+        }
+
+        &.vote-accepted{
+            color: $green;
+        }
+
+    }
 }
