Added delete and update answers functionality

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -154,3 +154,12 @@
 
     }
 }
+
+.respondent__person{
+    margin-right: auto;
+}
+
+.respondent__buttons{
+    margin-left: auto;
+    display: flex;
+}
