--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10650,3 +10650,12 @@ a.text-dark:focus {
   color: #38c172;
 }
 
+.respondent__person {
+  margin-right: auto;
+}
+
+.respondent__buttons {
+  margin-left: auto;
+  display: flex;
+}
+
