--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10628,7 +10628,7 @@ a.text-dark:focus {
 }
 
 .vote-controls .favorites-count {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .vote-controls a {
@@ -10643,6 +10643,10 @@ a.text-dark:focus {
 
 .vote-controls a.favorite.favorited,
 .vote-controls a.favorite.favorited:hover {
+  color: #ffed4a;
+}
+
+.vote-controls a.favorite.favorited .favorites-count {
   color: #ffed4a;
 }
 
