Added answer component and functionality for it

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10494,6 +10494,10 @@ a.text-dark:focus {
   }
 }
 
+[v-cloak] {
+  display: none;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
@@ -10661,5 +10665,13 @@ a.text-dark:focus {
 .respondent__buttons {
   margin-left: auto;
   display: flex;
+}
+
+.answer__btn-group {
+  margin-top: 10px;
+}
+
+.answer__btn {
+  margin-right: 5px;
 }
 
