--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+//Izitoast
+@import '~izitoast/dist/css/iziToast.min.css';
+
 
 [v-cloak] {display: none}
 
