1. Added json cors for localhost 2. Implemented load more answers feature

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10499,6 +10499,69 @@ a.text-dark:focus {
   }
 }
 
+.ajaxLoaderWrap {
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.ajaxLoader {
+  width: 50px;
+  height: 20px;
+  text-align: center;
+  font-size: 10px;
+}
+
+.ajaxLoader > div {
+  background-color: #6c757d;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+.ajaxLoader .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.ajaxLoader .rect3 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+
+.ajaxLoader .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.ajaxLoader .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-stretchdelay {
+  0%, 40%, 100% {
+    -webkit-transform: scaleY(0.4);
+  }
+
+  20% {
+    -webkit-transform: scaleY(1);
+  }
+}
+
+@keyframes sk-stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }
+
+  20% {
+    transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+  }
+}
+
 [v-cloak] {
   display: none;
 }
@@ -10688,5 +10751,9 @@ a.text-dark:focus {
 
 .answers-meta {
   margin-top: 20px;
+}
+
+.moreAnswers {
+  text-align: center;
 }
 
