--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10562,6 +10562,93 @@ a.text-dark:focus {
   }
 }
 
+.profile {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+.profile__avatar {
+  text-align: center;
+}
+
+.profile__avatarImg {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+}
+
+.profile__fullname {
+  display: flex;
+  align-items: center;
+}
+
+.profile__location {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  color: #8c8c8c;
+  margin-left: 10px;
+  margin-bottom: 0.5rem;
+}
+
+.profile__locationAddress {
+  margin-left: 5px;
+}
+
+.profile .profileAbout__title {
+  margin-top: 30px;
+}
+
+.profile .profileAbout__titleIcon {
+  font-size: 20px;
+}
+
+.profile .profileAbout__titleSpan {
+  margin-left: 5px;
+  font-size: 18px;
+}
+
+.profile .profileAbout__description {
+  margin-top: 10px;
+}
+
+.profile .contactInfo__title {
+  font-size: 16px;
+  color: #888181;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.profile .contactInfo__item {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.profile .contactInfo__name {
+  font-size: 16px;
+  width: 100px;
+}
+
+.profile .contactInfo__value {
+  margin-left: 50px;
+}
+
+.profile .contactInfo__sites {
+  list-style-type: none;
+  display: flex;
+}
+
+ul,
+li {
+  padding: 0;
+  margin: 0;
+}
+
 [v-cloak] {
   display: none;
 }
