Added UserProfile component

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10562,16 +10562,29 @@ a.text-dark:focus {
   }
 }
 
-.profile {
+.profile-container {
   background-color: #fff;
   width: 100%;
   height: 100%;
   padding-bottom: 30px;
-  padding-top: 30px;
+  padding-top: 15px;
+}
+
+.profile__header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.profile-router {
+  display: flex;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .profile__avatarWrap {
-  max-height: 200px;
+  max-height: 300px;
+  width: auto;
   overflow: hidden;
 }
 
@@ -10586,17 +10599,16 @@ a.text-dark:focus {
 }
 
 .profile__fullname {
-  display: flex;
-  align-items: center;
+  margin-right: auto;
+  margin-bottom: 0;
+}
+
+.profile__editBtn {
+  margin-left: auto;
 }
 
 .profile__location {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
   color: #8c8c8c;
-  margin-left: 10px;
   margin-bottom: 0.5rem;
 }
 
@@ -10654,6 +10666,64 @@ a.text-dark:focus {
 .contactInfo__sites {
   list-style-type: none;
   display: flex;
+}
+
+.route-group a.exact-active {
+  color: #fff !important;
+  background-color: #3490dc !important;
+  border-color: #3490dc !important;
+}
+
+.profileSettings {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.profileSettings__addGroup {
+  display: flex;
+}
+
+.profileSettings__socialLinksBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 30px;
+  margin-left: auto;
+}
+
+.profileSettings__socialLinksGroup {
+  margin-top: 10px;
+}
+
+.profileSettings__socialLinksBtn span {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.profileSettings__invalid {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #e3342f;
+}
+
+.profileSettings__phone {
+  position: relative;
+}
+
+.profileSettings__phone input {
+  padding: 0.375rem 1rem;
+}
+
+.profileSettings__leadingPlus {
+  position: absolute;
+  left: 5px;
+  display: inline-block;
+  font-size: 16px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 ul,
