--- a/resources/sass/_profile.scss
+++ b/resources/sass/_profile.scss
@@ -1,12 +1,28 @@
-.profile {
+.profile-container{
     background-color: #fff;
     width: 100%;
     height: 100%;
     padding-bottom: 30px;
-    padding-top: 30px;
+    padding-top: 15px;
+}
+
+.profile {
+
+    &__header{
+        display: flex;
+        align-items: center;
+        margin-bottom: 0.5rem;
+    }
+
+    &-router{
+        display: flex;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 
     &__avatarWrap {
-       max-height: 200px;
+       max-height: 300px;
+       width: auto;
        overflow: hidden;
     }
 
@@ -21,17 +37,17 @@
     }
 
     &__fullname{
-        display: flex;
-        align-items: center;
+        margin-right: auto;
+        margin-bottom: 0;
+    }
+
+    &__editBtn{
+        margin-left: auto;
+        
     }
 
     &__location{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
         color: #8c8c8c;
-        margin-left: 10px;
         margin-bottom: 0.5rem;
     }
     &__locationAddress{
@@ -90,5 +106,65 @@
     }
     &__site{
         
+    }
+}
+
+
+.route-group{
+    a.exact-active{
+        color: #fff !important;
+        background-color: #3490dc !important;
+        border-color: #3490dc !important;
+    }
+}
+
+.profileSettings{
+    padding-left: 15px;
+    padding-right: 15px;
+
+    &__addGroup{
+        display: flex;
+    }
+    &__socialLinksBtn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 30px;
+        width: 30px;
+        margin-left: auto;
+    }
+    &__socialLinksGroup{
+        //display: flex;
+        margin-top: 10px;
+    }
+
+    &__socialLinksBtn span{
+        font-size: 12px;
+        font-weight: bold;
+    }
+    &__socialLink{
+        
+    }
+    &__invalid{
+        width: 100%;
+        margin-top: 0.25rem;
+        font-size: 80%;
+        color: #e3342f
+    }
+
+    &__phone{
+        position: relative;
+        input{
+            padding: 0.375rem 1rem;
+        }
+    }
+
+    &__leadingPlus{
+        position: absolute;
+        left: 5px;
+        display: inline-block;
+        font-size: 16px;
+        top: 50%;
+        transform: translateY(-50%);
     }
 }
