--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10726,6 +10726,11 @@ a.text-dark:focus {
           transform: translateY(-50%);
 }
 
+.profileMessages {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 ul,
 li {
   padding: 0;
