It was added: 1. Messages output 2. Deleting messages (send them to trash) 3. Reply to incoming messages functionality

--- a/resources/sass/_profile.scss
+++ b/resources/sass/_profile.scss
@@ -173,3 +173,21 @@
     padding-left: 15px;
     padding-right: 15px;
 }
+
+.incoming, .outgoing{
+    margin-top: 20px;
+    &__imgWrap{
+        display: block;
+    }
+    &__img {
+        width: 50px;
+        height: 50px;
+    }
+    &__body{
+        margin-left: 10px;
+    }
+}
+
+.sendmessage{
+    margin-top: 20px;
+}
