--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10731,6 +10731,31 @@ a.text-dark:focus {
   padding-right: 15px;
 }
 
+.incoming,
+.outgoing {
+  margin-top: 20px;
+}
+
+.incoming__imgWrap,
+.outgoing__imgWrap {
+  display: block;
+}
+
+.incoming__img,
+.outgoing__img {
+  width: 50px;
+  height: 50px;
+}
+
+.incoming__body,
+.outgoing__body {
+  margin-left: 10px;
+}
+
+.sendmessage {
+  margin-top: 20px;
+}
+
 ul,
 li {
   padding: 0;
